--- a/DBMS_project/backend/package.json
+++ b/DBMS_project/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "swagger-autogen": "node ./swagger.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -15,6 +16,8 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "pug": "2.0.0-beta11",
+    "swagger-autogen": "^2.21.1",
+    "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   }
 }
