--- a/DBMS_project/backend/package.json
+++ b/DBMS_project/backend/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
+    "express-basic-auth": "^1.2.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
